feat: Firebase Firestore 연동 - localStorage → 클라우드 동기화

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 DISABLE_ESLINT_PLUGIN=true
+REACT_APP_FIREBASE_API_KEY=AIzaSyB5av2Ye0MqCb_vQMJkj9fw5HMSGnwqnlw
+REACT_APP_FIREBASE_AUTH_DOMAIN=chaovietnam-login.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=chaovietnam-login
+REACT_APP_FIREBASE_STORAGE_BUCKET=chaovietnam-login.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=249390849714
+REACT_APP_FIREBASE_APP_ID=1:249390849714:web:c85f3a442b947417e973ab
